# Easy-Plan

./: .env.example  .gitignore  Plan.sln  config.toml  pyproject.toml
.claude/: settings.local.json
data/: context.md  goals.md  profile.md
docs/: api-contract-v1.md  release-checklist.md
docs/superpowers/plans/: 2026-04-12-plan-agent.md  2026-04-14-plan-steward-platform-roadmap.md
docs/superpowers/specs/: 2026-04-12-plan-agent-design.md
frontend/PlanStewardClient/: BackendApiClient.cs
frontend/PlanStewardClient/Clients/: AutomationClient.cs  ChatClient.cs  EventsClient.cs  InsightsClient.cs  NotesClient.cs  OverviewClient.cs  PlanningClient.cs  SettingsClient.cs  SourcesClient.cs
frontend/PlanStewardWinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PlanStewardWinUI.csproj  app.manifest
frontend/PlanStewardWinUI.Tests/: BackendApiClientTests.cs  PlanStewardWinUI.Tests.csproj
plan/: __init__.py  agent.py  cli.py  config.py  memory.py  scheduler.py  tasks.py
plan/prompts/: analyze.txt  plan.txt  review.txt
plan/sources/: __init__.py  lazy_zju.py  shell.py
plan/steward/: __init__.py  config.py  events.py  host.py
tests/: test_agent.py  test_cli.py  test_config.py  test_e2e.py  test_memory.py  test_sources.py  test_steward_adapters.py  test_steward_automation.py  test_steward_events.py  test_tasks.py
tests/steward/: conftest.py  test_automation_api.py  test_chat_api.py  test_insights_api.py  test_notes_api.py  test_overview_api.py  test_planning_api.py  test_settings_api.py  test_sources_api.py
(+67 files in other folders)
